#
# $Id: Makefile.am,v 1.9 2005-01-17 16:25:24 lecroart Exp $
#

MAINTAINERCLEANFILES = Makefile.in

DIST_SUBDIRS	     = net 3d pacs sound misc georges ligo

SUBDIRS              = @NEL_SUBDIRS@

EXTRA_DIST           =	3d.dsp		\
			georges.dsp	\
			ligo.dsp	\
			logic.dsp	\
			misc.dsp	\
			net.dsp		\
			pacs.dsp	\
			sound.dsp	\
			3d.vcproj	\
			georges.vcproj	\
			ligo.vcproj	\
			logic.vcproj	\
			misc.vcproj	\
			net.vcproj	\
			pacs.vcproj	\
			sound.vcproj	\
			3d_8.vcproj	\
			georges_8.vcproj\
			ligo_8.vcproj	\
			logic_8.vcproj	\
			misc_8.vcproj	\
			net_8.vcproj	\
			pacs_8.vcproj	\
			sound_8.vcproj

# End of Makefile.am
