FILE(GLOB SRC *.cpp *.h)

ADD_EXECUTABLE(admin_service ${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${MYSQL_INCLUDE_DIR} ${NELMISC_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(admin_service ${PLATFORM_LINKFLAGS} ${LIBXML2_LIBRARIES} ${MYSQL_LIBRARIES} ${NELMISC_LIBRARY} ${NELNET_LIBRARY})
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS admin_service RUNTIME DESTINATION sbin)
INSTALL(FILES admin_service.cfg common.cfg DESTINATION share/nel/nelns)
