#
# $Id: Makefile.am,v 1.7 2002-11-13 16:59:55 coutelas Exp $
#

MAINTAINERCLEANFILES  = Makefile.in

EXTRA_DIST            =	common.cfg \
			admin_service.cfg \
			admin_service.dsp

sbin_PROGRAMS         = admin_service

admin_service_SOURCES = admin_service.cpp connection_web.cpp

# End of Makefile.am

