#
# $Id: Makefile.am,v 1.8 2002-09-16 14:50:07 lecroart Exp $
#

MAINTAINERCLEANFILES  = Makefile.in

EXTRA_DIST		       = login_service.cfg \
				 login_service.dsp \
				 common.cfg

sbin_PROGRAMS         = login_service

login_service_SOURCES = connection_web.cpp              \
                        connection_web.h                \
                        connection_ws.cpp                  \
                        connection_ws.h                    \
                        login_service.cpp                  \
                        login_service.h

# End of Makefile.am

