#
# $Id: Makefile.am,v 1.7 2006-05-31 12:14:16 boucher Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

EXTRA_DIST		       = welcome_service.cfg \
				 welcome_service.dsp \
				 common.cfg

sbin_PROGRAMS           = welcome_service

welcome_service_SOURCES = welcome_service.cpp \
			  welcome_service_itf.cpp

# End of Makefile.am
