FILE(GLOB SRC *.cpp *.h)

ADD_EXECUTABLE(yourAppName ${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${NELMISC_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(yourAppName ${PLATFORM_LINKFLAGS} ${LIBXML2_LIBRARIES} ${NELMISC_LIBRARY} ${NEL3D_LIBRARY} ${JPEG_LIBRARY})
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS yourAppName RUNTIME DESTINATION bin)
