ADD_SUBDIRECTORY(src)

SET(database "${CMAKE_INSTALL_PREFIX}/${PKGDIR}")
CONFIGURE_FILE(client.cfg.in client.cfg)

INSTALL(FILES ${CMAKE_BINARY_DIR}/client.cfg DESTINATION ${PKGDIR})
INSTALL(DIRECTORY data/
        DESTINATION ${PKGDIR}/data/
        PATTERN "CVS" EXCLUDE
        PATTERN ".svn" EXCLUDE
        PATTERN "Makefile*" EXCLUDE)
