#
# $Id: Makefile.am,v 1.8 2005-01-17 17:01:32 lecroart Exp $
#

MAINTAINERCLEANFILES = Makefile.in

DIST_SUBDIRS      = net 3d pacs sound misc georges ligo memory

SUBDIRS              = @NEL_SUBDIRS@

includedir           = ${prefix}/include/nel

#include_HEADERS      = $(wildcard *.h)


# End of Makefile.am

