#
# $Id: Makefile.am,v 1.1 2005-04-04 09:45:06 cado Exp $
#

MAINTAINERCLEANFILES      = Makefile.in

bin_PROGRAMS              = georges

georges_SOURCES = main.cpp

AM_CXXFLAGS               = -I$(top_srcdir)/src 

georges_LDADD   = ../../src/misc/libnelmisc.la \
                  ../../src/georges/libnelgeorges.la


# End of Makefile.am

