FILE(GLOB SRC *.cpp *.h)

DECORATE_NEL_LIB("nelpacs")
SET(NLPACS_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel3d")
SET(NL3D_LIB ${LIBNAME})

ADD_EXECUTABLE(nl_sample_pacs ${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(nl_sample_pacs ${LIBXML2_LIBRARIES} ${PLATFORM_LINKFLAGS} ${NLPACS_LIB} ${NL3D_LIB})
IF(WIN32)
  SET_TARGET_PROPERTIES(nl_sample_pacs PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt /SUBSYSTEM:WINDOWS")
ENDIF(WIN32)
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS nl_sample_pacs RUNTIME DESTINATION bin)
INSTALL(FILES readme.txt DESTINATION share/nel/nl_sample_pacs)
INSTALL(DIRECTORY shapes/ 
	DESTINATION share/nel/nl_sample_pacs/shapes
	PATTERN "CVS" EXCLUDE
	PATTERN ".svn" EXCLUDE
	PATTERN "Makefile*" EXCLUDE)
