FILE(GLOB SRC *.cpp)

DECORATE_NEL_LIB("nel3d")
SET(NL3D_LIB ${LIBNAME})
DECORATE_NEL_LIB("nelmisc")
SET(NLMISC_LIB ${LIBNAME})

IF(NOT WIN32)
  ADD_LIBRARY(${NL3D_LIB} SHARED ${SRC})
ELSE(NOT WIN32)
  ADD_LIBRARY(${NL3D_LIB} STATIC ${SRC})
ENDIF(NOT WIN32)

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${FREETYPE_INC})
TARGET_LINK_LIBRARIES(${NL3D_LIB} ${NLMISC_LIB} ${FREETYPE_LIB})
SET_TARGET_PROPERTIES(${NL3D_LIB} PROPERTIES VERSION ${NL_VERSION})

IF(WIN32)
  SET_TARGET_PROPERTIES(${NL3D_LIB} PROPERTIES COMPILE_FLAGS "/Yustd3d.h /FIstd3d.h")
  SET_TARGET_PROPERTIES(${NL3D_LIB} PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
ENDIF(WIN32)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

SUBDIRS(driver)
