FILE(GLOB SRC *.cpp ../../include/nel/cegui/*.h)

DECORATE_NEL_LIB("nelceguirenderer")
SET(NLCEGUIRENDERER_LIB ${LIBNAME})
DECORATE_NEL_LIB("nelmisc")
SET(NLMISC_LIB ${LIBNAME})
DECORATE_NEL_LIB("nel3d")
SET(NL3D_LIB ${LIBNAME})

ADD_LIBRARY(${NLCEGUIRENDERER_LIB} SHARED ${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${FREETYPE_INC} ${CEGUI_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${NLCEGUIRENDERER_LIB} ${NL3D_LIB} ${CEGUI_LIBRARY})
SET_TARGET_PROPERTIES(${NLCEGUIRENDERER_LIB} PROPERTIES VERSION ${NL_VERSION})

IF(WIN32)
#  SET_TARGET_PROPERTIES(${NLCEGUIRENDERER_LIB} PROPERTIES COMPILE_FLAGS "/Yustd3d.h /FIstd3d.h")
#  SET_TARGET_PROPERTIES(${NLCEGUIRENDERER_LIB} PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
  ADD_DEFINITIONS("/DNEL_GUIRENDERER_EXPORTS")
ENDIF(WIN32)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS ${NLCEGUIRENDERER_LIB} LIBRARY DESTINATION lib)

